# Optimum

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
autochess/: __init__.py  bootstrap.py  models.py
autochess/systems/: __init__.py  arena.py  bounty.py  build_phase.py  combat.py  generator.py  loader.py  market.py  match.py  merging.py  modifiers.py  optimizer.py  shop.py
autochess/views/: __init__.py  build_view.py  game_view.py  market_view.py  menu_view.py
data/: archetypes.json  balancing.json  items.json
tests/: test_arena.py  test_bootstrap.py  test_build_phase.py  test_generation.py  test_market.py  test_match.py  test_modifiers.py  test_optimizer.py  test_shop_inventory.py
