[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pixel-ffa-autochess"
version = "0.1.0"
description = "Deterministic pixel-art FFA auto-chess prototype with Arcade.py"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "arcade>=2.6.17",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
